--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8093
 spring.datasource.url=jdbc:postgresql://localhost:5432/chatter
 spring.datasource.username=postgres
-spring.datasource.password=Dave
+spring.datasource.password=12345678
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
