--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,12 @@
 			<optional>true</optional>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-websocket -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+			<version>2.7.14</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.postgresql</groupId>
